# cspir

./: CMakeLists.txt  input.c
.cache/clangd/index/: main.cpp.D4D410785114C2B5.idx  parser.cpp.59D15453503221FA.idx  parser.h.54372EDD24E74A42.idx  spirv_generator.cpp.3BF7C09232210913.idx  spirv_generator.h.F3EA2CBDE82603C0.idx  types.h.91EAB5A51307BDB4.idx
src/: main.cpp  parser.cpp  parser.h  spirv_generator.cpp  spirv_generator.h  types.h
test/: text1.c
